style(Contacts-1728): increased h2's font size and set mt for it. Corrected top position and height for dividers. Increased socialLinks' icons size. Increased socialLinks containers' w and gap-x between icons

--- a/src/index.css
+++ b/src/index.css
@@ -290,7 +290,8 @@
     --section-bot-div-height: 272px;
     --section-top-div-height: 232px;
 
-    --contacts-div-bot-height: 536px;
+    --contacts-div-bot-height: 490px;
+    --contacts-div-bot-top: 172px;
 
     --name-year-size: 3.75rem;
   }
